--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accesso denegado</title>
-</head>
-<body>
-    <h1>Acceso denegado</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" /> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Google Sign In</title>
+    </head>
+    <body>
+        <h1>Google Sign In</h1>
+        <div
+            id="g_id_onload"
+            data-client_id="768570928399-9qc0i6b81a262og36g0h6757henahoo8.apps.googleusercontent.com" 
+            data-auto_prompt="false"
+            data-callback="handleCredentialResponse"
+        ></div>
+        <div
+            class="g_id_signin"
+            data-type="standard"
+            data-size="large"
+            data-theme="outline"
+            data-text="sign_in_with"
+            data-shape="rectangular"
+            data-logo_alignment="left"
+        ></div>
+        <script
+            src="https://accounts.google.com/gsi/client"
+            async
+            defer
+        ></script>
+        <script>
+            function handleCredentialResponse(response) {
+                // Google Token : ID_TOKEN
+                console.log('ID Token', response.credential)
+          
+            }
+          </script>
+    </body>
 </html>
