--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" /> 
+        <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Google Sign In</title>
@@ -10,7 +10,7 @@
         <h1>Google Sign In</h1>
         <div
             id="g_id_onload"
-            data-client_id="768570928399-9qc0i6b81a262og36g0h6757henahoo8.apps.googleusercontent.com" 
+            data-client_id="768570928399-9qc0i6b81a262og36g0h6757henahoo8.apps.googleusercontent.com"
             data-auto_prompt="false"
             data-callback="handleCredentialResponse"
         ></div>
@@ -31,9 +31,23 @@
         <script>
             function handleCredentialResponse(response) {
                 // Google Token : ID_TOKEN
-                console.log('ID Token', response.credential)
-          
+                // console.log('ID Token', response.credential);
+
+                const body = { id_token: response.credential};
+
+                fetch("http://localhost:8080/api/auth/google", {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type':'application/json'
+                    },
+                    body: JSON.stringify(body)
+                })
+                    .then( resp => resp.json())
+                    .then( resp => {
+                        console.log(resp);
+                    })
+                    .catch( console.warn);
             }
-          </script>
+        </script>
     </body>
 </html>
