--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
             data-shape="rectangular"
             data-logo_alignment="left"
         ></div>
+
+        <button id="google_signout">Sing Out</button>
+
         <script
             src="https://accounts.google.com/gsi/client"
             async
@@ -45,9 +48,19 @@
                     .then( resp => resp.json())
                     .then( resp => {
                         console.log(resp);
+                        localStorage.setItem('email',resp.usuario.correo);
                     })
                     .catch( console.warn);
             }
+        const button = document.getElementById('google_signout');
+        button.onclick = () => {
+            console.log(google.accounts.id)
+            google.accounts.id.disableAutoSelect()
+            google.accounts.id.revoke ( localStorage.getItem('email'), done => {
+                localStorage.clear();
+                location.reload();
+            });
+        }
         </script>
     </body>
 </html>
