--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Google Signin</title>
 
     <meta name="google-signin-client_id" content="1023916028923-mnn067lcjn3itrr0lo8oj1s07kddgrcj.apps.googleusercontent.com">
 
 </head>
-<body>
+<body class="container">
+    <div class="row mt-5">
+        <div class="col-sm-6">
+            <h1>Google Signin</h1>
+            <hr>
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            <br>
+            <a href="#" onclick="signOut();">Sign out</a>
 
-    <h1>Google Signin</h1>
-    <hr>
+        </div>
+        <div class="col-sm-6">
 
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        </div>
+
+    </div>
+
 
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-    <a href="#" onclick="signOut();">Sign out</a>
 
     <script>
 
         console.log(window.location.hostname.includes('localhost'))
 
-        var url = ( window.location.hostname.includes('localhost') )
-                    ? 'http://localhost:8080/api/auth/google'
-                    : 'https://restserver-curso-fher.herokuapp.com/api/auth/google';
+        var url = 'http://localhost:8080/api/auth/google';
+                    // ? 'http://localhost:8080/api/auth/google'
+                    // : 'https://restserver-curso-fher.herokuapp.com/api/auth/google';
 
 
         function onSignIn(googleUser) {
